--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* styles.css */
 body {
     display: flex;
     justify-content: center;
@@ -10,13 +9,17 @@ body {
 .container {
     display: flex;
     flex-wrap: wrap;
-    width: 256px; /* 16 squares of 16px each */
-    height: 256px; /* 16 squares of 16px each */
+    width: 256px;
+    height: 256px;
 }
 
 .container div {
     width: 16px;
     height: 16px;
-    box-sizing: border-box; /* Ensures padding and border don't affect size */
+    box-sizing: border-box;
     border: 1px solid #000;
+}
+
+.hovered {
+    background-color: blue;
 }
