--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,25 @@
+/* styles.css */
 body {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    height: 100vh;
     margin: 0;
+    padding-top: 20px; /* Add some padding for visibility */
+}
+
+#grid-button {
+    margin-bottom: 20px;
 }
 
 .container {
     display: flex;
     flex-wrap: wrap;
-    width: 256px;
-    height: 256px;
+    width: 960px;
+    height: 960px;
+    border: 1px solid #000; /* Add a border to see the container */
 }
 
 .container div {
-    width: 16px;
-    height: 16px;
     box-sizing: border-box;
     border: 1px solid #000;
-}
-
-.hovered {
-    background-color: blue;
 }
